# datadagger

./: .env.example  .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  PIP_INSTALL_GUIDE.md  datadagger.py  fix_imports.py  pyproject.toml  pytest.ini  release.sh  requirements.txt  run_tests.py  setup.py  setup.sh  validate_release.py
.github/workflows/: publish-pypi.yml  test.yml
datadagger/analyzers/: text_analyzer.py
datadagger/utils/: data_store.py
docs/: PYPI_SETUP.md
static/: index.html
tests/: __init__.py  conftest.py  requirements-test.txt  test_setup_command.py  test_text_analyzer.py  test_timeline_viz.py
